--- a/src/Extensions/Extensions.csproj
+++ b/src/Extensions/Extensions.csproj
@@ -4,5 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="JustinWritesCode.Extensions"  ExcludeAssets="ContentFiles" />
+    <PackageReference Include="JustinWritesCode.Abstractions"  ExcludeAssets="ContentFiles" />
   </ItemGroup>
 </Project>
