--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -10,19 +10,35 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  checkout:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
+  setup-dotnet:
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+  restore:
+    runs-on: ubuntu-latest
+    needs: setup-dotnet
+    steps:
     - name: Restore dependencies
       run: dotnet restore
+    - name: Restore Central Files
+      run: dotnet build *.restoreproj -t:RestoreCentralFiles
+  build:
+    runs-on: ubuntu-latest
+    needs: restore
+    steps:
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore *.slnproj
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
     - name: Test
       run: dotnet test --no-build --verbosity normal
