--- a/src/Abstractions/Abstractions.csproj
+++ b/src/Abstractions/Abstractions.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="ProxyInterfaceGenerator" />
+    <PackageReference Include="JustinWritesCode.Abstractions" />
   </ItemGroup>
 </Project>
