--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -22,14 +22,18 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+  restore-central-files:
+    runs-on: ubuntu-latest
+    needs: checkout
+    steps:
+    - name: Restore Central Files
+      run: dotnet build *.restoreproj -t:RestoreCentralFiles
   restore:
     runs-on: ubuntu-latest
-    needs: setup-dotnet
+    needs: checkout
     steps:
     - name: Restore dependencies
       run: dotnet restore
-    - name: Restore Central Files
-      run: dotnet build *.restoreproj -t:RestoreCentralFiles
   build:
     runs-on: ubuntu-latest
     needs: restore
