--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - run: cat global.json
     - name: Restore Central Files
       run: dotnet restore *.restoreproj -t:RestoreCentralFiles
     - name: Restore dependencies
