--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -19,9 +19,14 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 6.0.x
+    - name: Install dotnet-file tool
+      run: dotnet tool install -g dotnet-file
+    - name: Download global.json
+      run: dotnet file https://raw.githubusercontent.com/justinwritescode/justinwritescode/main/global.json
+    - name Output contents of global.json
+      run: cat /home/runner/work/EntityFrameworkCore/EntityFrameworkCore/global.json
     - name: Restore Central Files
       run: dotnet restore *.restoreproj -t:RestoreCentralFiles
-    - run: cat /home/runner/work/EntityFrameworkCore/EntityFrameworkCore/global.json
     - name: Restore dependencies
       run: dotnet restore *.slnproj
     - name: Restore Central Files
