--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -22,7 +22,7 @@ jobs:
         dotnet-version: 6.0.x
         
     - name: Install dotnet tools
-      run: dotnet tool restore
+      run: dotnet tool install -g "dotnet-file"
       
     - name: Download global.json
       run: dotnet file add https://raw.githubusercontent.com/justinwritescode/justinwritescode/main/global.json
