--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -24,6 +24,12 @@ jobs:
     - name: List NuGet Sources
       run: dotnet nuget list source;
       
+    - name: Add GitHub Packages NuGet source
+      run: dotnet nuget add source "https://nuget.pkg.github.com/justinwritescode/index.json" --name GitHub --username justinwritescode --password ${{secrets.GIT_TOKEN}} --store-password-in-clear-text
+      
+    - name: List NuGet Sources
+      run: dotnet nuget list source;
+      
     - name: Print the working directory
       run: pwd;
              
