--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -42,6 +42,12 @@ jobs:
     - name: Restore Central Files
       run: dotnet restore *.restoreproj -t:RestoreCentralFiles
       
+    - name: List the directory contents
+      run: ls;
+      
+    - name: Print the working directory
+      run: pwd;
+      
     - name: Restore dependencies
       run: dotnet restore *.slnproj
       
