--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -57,5 +57,5 @@ jobs:
     - name: Build the Solution
       run: dotnet build *.slnproj --configuration Release
       
-    - name: Test
-      run: dotnet test --no-build --verbosity normal --configuration Release
+    #- name: Test
+    #  run: dotnet test --no-build --verbosity normal --configuration Release
