--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -53,6 +53,9 @@ jobs:
       
     #- name: Restore dependencies
     #  run: dotnet restore *.slnproj
+    
+    - name: Output Packages.pkgs
+      run: cat /home/runner/work/EntityFrameworkCore/EntityFrameworkCore/Packages.pkgs
       
     - name: Build the Solution
       run: dotnet build *.slnproj --configuration Release
