--- a/src/Extensions/Extensions.csproj
+++ b/src/Extensions/Extensions.csproj
@@ -1,9 +1,25 @@
+<!--
+ Extensions.csproj
+ 
+   Created: 2022-10-23-02:22:16
+   Modified: 2022-10-29-08:13:24
+ 
+   Author: Justin Chase <justin@justinwritescode.com>
+   
+   Copyright © 2022 Justin Chase, All Rights Reserved
+      License: MIT (https://opensource.org/licenses/MIT)
+-->
+
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>JustinWritesCode.EntityFrameworkCore.Extensions</AssemblyName>
+    <PackageId>$(AssemblyName)</PackageId>
+    <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
   </PropertyGroup>
   <ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
     <PackageReference Include="JustinWritesCode.Extensions"  ExcludeAssets="ContentFiles" />
     <PackageReference Include="JustinWritesCode.Abstractions"  ExcludeAssets="ContentFiles" />
   </ItemGroup>
