--- a/src/Constants/JustinWritesCode.EntityFrameworkCode.Constants.csproj
+++ b/src/Constants/JustinWritesCode.EntityFrameworkCode.Constants.csproj
@@ -1,18 +1,18 @@
 <!--
- Constants.csproj
- 
-   Created: 2022-10-22-10:30:32
-   Modified: 2022-10-29-08:13:00
- 
-   Author: Justin Chase <justin@justinwritescode.com>
-   
-   Copyright © 2022 Justin Chase, All Rights Reserved
-      License: MIT (https://opensource.org/licenses/MIT)
+ * JustinWritesCode.EntityFrameworkCode.Constants.csproj
+ * 
+ *   Created: 2022-10-22-01:30:32
+ *   Modified: 2022-11-19-04:06:43
+ * 
+ *   Author: Justin Chase <justin@justinwritescode.com>
+ *   
+ *   Copyright © 2022 Justin Chase, All Rights Reserved
+ *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <IsNuGetized>true</IsNuGetized>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
