--- a/src/Extensions/JustinWritesCode.EntityFrameworkCode.Extensions.csproj
+++ b/src/Extensions/JustinWritesCode.EntityFrameworkCode.Extensions.csproj
@@ -1,18 +1,18 @@
 <!--
- Extensions.csproj
- 
-   Created: 2022-10-23-02:22:16
-   Modified: 2022-10-29-08:13:24
- 
-   Author: Justin Chase <justin@justinwritescode.com>
-   
-   Copyright © 2022 Justin Chase, All Rights Reserved
-      License: MIT (https://opensource.org/licenses/MIT)
+ * JustinWritesCode.EntityFrameworkCode.Extensions.csproj
+ * 
+ *   Created: 2022-10-23-05:22:16
+ *   Modified: 2022-11-19-04:06:40
+ * 
+ *   Author: Justin Chase <justin@justinwritescode.com>
+ *   
+ *   Copyright © 2022 Justin Chase, All Rights Reserved
+ *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
     <AssemblyName>JustinWritesCode.EntityFrameworkCore.Extensions</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
