--- a/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
+++ b/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
@@ -12,7 +12,7 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
     <AssemblyName>JustinWritesCode.EntityFrameworkCore.Abstractions</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
