--- a/src/Extensions/JustinWritesCode.EntityFrameworkCore.Extensions.csproj
+++ b/src/Extensions/JustinWritesCode.EntityFrameworkCore.Extensions.csproj
@@ -12,7 +12,8 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>JustinWritesCode.EntityFrameworkCore.Extensions</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
@@ -20,7 +21,7 @@
   <ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
-    <PackageReference Include="JustinWritesCode.Extensions"  ExcludeAssets="ContentFiles" />
+    <PackageReference Include="JustinWritesCode.System.Extensions" />
     <PackageReference Include="JustinWritesCode.Abstractions"  ExcludeAssets="ContentFiles" />
   </ItemGroup>
 </Project>
