lots of changes

--- a/JustinWritesCode.EntityFrameworkCore.csproj
+++ b/JustinWritesCode.EntityFrameworkCore.csproj
@@ -12,9 +12,10 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-		<TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Description>Abstractions and tools for EF Core</Description>
+    <DocsDir>$(MSBuildProjectDirectory)/./docs</DocsDir>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="./src/**/*.*proj" />
