--- a/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
+++ b/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
@@ -11,24 +11,21 @@
 -->
 
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-    <AssemblyName>JustinWritesCode.EntityFrameworkCore.Abstractions</AssemblyName>
-    <PackageId>$(AssemblyName)</PackageId>
-    <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
-  </PropertyGroup>
-  <ItemGroup>
-    <Author Include="Municipal Drew" Email="drew@wheatleythecat.com" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Usings" />
-    <PackageReference Include="ProxyInterfaceGenerator" IncludeAssets="build;  analyzers;" PrivateAssets="All" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' == 'Testing' Or '$(Configuration)' == 'Local'">
-    <ProjectReference Include="../../../Types/src/Core/Abstractions/JustinWritesCode.Abstractions.csproj" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(Configuration)' != 'Testing' And '$(Configuration)' != 'Local'">
-    <PackageReference Include="JustinWritesCode.Abstractions" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="./JustinWritesCode.EntityFrameworkCore.Abstractions.props" PackagePath="build/%(Filename)%(Extension)" />
-  </ItemGroup>
+    <PropertyGroup>
+      <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
+      <AssemblyName>JustinWritesCode.EntityFrameworkCore.Abstractions</AssemblyName>
+      <PackageId>$(AssemblyName)</PackageId>
+      <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
+    </PropertyGroup>
+    <ItemGroup>
+      <Author Include="Municipal Drew" Email="drew@wheatleythecat.com" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Usings" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" />
+      <PackageReference Include="System.Collections.Generic.Usings" />
+      <PackageReference Include="JustinWritesCode.Abstractions" ExcludeAssets="ContentFiles" />
+      <PackageReference Include="JustinWritesCode.InterfaceGenerator" IncludeAssets="Analyzers" ExcludeAssets="Compile; ContentFiles; Lib; Native" PrivateAssets="All" />
+    </ItemGroup>
+    <ItemGroup>
+      <Using Remove="System.Text.Json*" />
+    </ItemGroup>
   </Project>
