--- a/src/Constants/JustinWritesCode.EntityFrameworkCore.Constants.csproj
+++ b/src/Constants/JustinWritesCode.EntityFrameworkCore.Constants.csproj
@@ -12,7 +12,7 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0;net7.0</TargetFrameworks>
     <IsPackable>true</IsPackable>
     <IsNuGetized>true</IsNuGetized>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -20,8 +20,18 @@
     <EnableFluentBuilder>false</EnableFluentBuilder>
     <AssemblyName>JustinWritesCode.EntityFrameworkCore.Constants</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
+    <ImplicitUsings>true</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="JustinWritesCode.Enumerations.CodeGeneration" IncludeAssets="Analyzers" PrivateAssets="All" />
+    <PackageReference Include="System.ComponentModel.Annotations" />
+    <PackageReference Include="JustinWritesCode.Enumerations.CodeGeneration.V2" IncludeAssets="Analyzers;Build" PrivateAssets="All" />
+    <PackageReference Include="JustinWritesCode.ComponentModel" />
+    <PackageReference Include="JustinWritesCode.Enumerations.Abstractions" />
+    <PackageReference Include="JustinWritesCode.Enumerations.Enumeration" />
+  </ItemGroup>
+  <ItemGroup>
+    <Using Include="System.Reflection" />
+    <Using Include="System" />
+    <Using Include="System.Runtime.CompilerServices" />
   </ItemGroup>
 </Project>
