--- a/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
+++ b/src/Abstractions/JustinWritesCode.EntityFrameworkCore.Abstractions.csproj
@@ -6,7 +6,7 @@
  * 
  *   Author: Justin Chase <justin@justinwritescode.com>
  *   
- *   Copyright © 2022 Justin Chase, All Rights Reserved
+ *   Copyright © 2022-2023 Justin Chase, All Rights Reserved
  *      License: MIT (https://opensource.org/licenses/MIT)
 -->
 
@@ -18,12 +18,12 @@
       <EnableGlobalCodeGenerators>false</EnableGlobalCodeGenerators>
     </PropertyGroup>
     <ItemGroup>
-      <Author Include="Municipal Drew" Email="drew@wheatleythecat.com" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Usings" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" />
       <PackageReference Include="System.Collections.Generic.Usings" />
       <PackageReference Include="JustinWritesCode.Abstractions" ExcludeAssets="ContentFiles" />
-      <PackageReference Include="JustinWritesCode.InterfaceGenerator" IncludeAssets="Analyzers" ExcludeAssets="Compile; ContentFiles; Lib; Native" PrivateAssets="All" />
+      <PackageReference Include="JustinWritesCode.Security.Constants" ExcludeAssets="ContentFiles" />
+      <PackageReference Include="JustinWritesCode.InterfaceGenerator" IncludeAssets="Analyzers;Build" ExcludeAssets="Compile; ContentFiles; Lib; Native" PrivateAssets="All" />
     </ItemGroup>
     <ItemGroup>
       <Using Remove="System.Text.Json*" />
